--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a href="#">FlexBlog</a>
         </div>
 
-        <nav>
+        <nav class="menu-nav">
           <ul>
             <li><a href="#sobre">Sobre</a></li>
             <li><a href="#produtos">Produtos</a></li>
@@ -93,41 +93,41 @@
       <div class="preco-item">
         <h2>Cobre</h2>
         <span><sup>R$</sup>19</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Suporte 24h</li>
+        </ul>
+        <a href="#">Comprar</a>
       </div>
-      <ul>
-        <li>Planos Ilimitados</li>
-        <li>Acesso Restrito</li>
-        <li>Conteúdo Secreto</li>
-        <li>Suporte 24h</li>
-      </ul>
-      <a href="#">Comprar</a>
 
       <div class="preco-item">
         <h2>Prata</h2>
         <span><sup>R$</sup>39</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Suporte 24h</li>
+          <li>Compra Exclusiva</li>
+        </ul>
+        <a href="#">Comprar</a>
       </div>
-      <ul>
-        <li>Planos Ilimitados</li>
-        <li>Acesso Restrito</li>
-        <li>Conteúdo Secreto</li>
-        <li>Suporte 24h</li>
-        <li>Compra Exclusiva</li>
-      </ul>
-      <a href="#">Comprar</a>
 
       <div class="preco-item">
         <h2>Ouro</h2>
         <span><sup>R$</sup>79</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Suporte 24h</li>
+          <li>Compra Exclusiva</li>
+          <li>Download dos Itens</li>
+        </ul>
+        <a href="#">Comprar</a>
       </div>
-      <ul>
-        <li>Planos Ilimitados</li>
-        <li>Acesso Restrito</li>
-        <li>Conteúdo Secreto</li>
-        <li>Suporte 24h</li>
-        <li>Compra Exclusiva</li>
-        <li>Download dos Itens</li>
-      </ul>
-      <a href="#">Comprar</a>
     </section>
 
     <section class="qualidade" id="qualidade">
